[feat] image process tasks
